# ryd-numerov

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/actions/setup-uv/: action.yml
.github/workflows/: documentation.yml  publish.yml  python_wheel.yml  testing.yml  type_checking.yml
docs/: .gitignore  Makefile  conf.py  examples.rst  index.rst  make.bat  modules.rst
docs/_templates/: layout.html
docs/_templates/autosummary/: class.rst
docs/examples/: angular_state.ipynb  arc_functions.py  benchmark_circular_matrixelements.ipynb  benchmark_dipole_matrix_elements.ipynb  benchmark_hydrogen.ipynb  benchmark_njit.ipynb  circular_matrix_elements.ipynb  compare_wavefunctions.ipynb  compare_zmin.ipynb  dipole_elements_decay.ipynb  dipole_matrix_elements.ipynb  example_Rb.ipynb  example_hydrogen.ipynb  example_matrix_elements.ipynb  hydrogen_wavefunction.ipynb  lifetimes.ipynb  rubidium_wavefunction.ipynb
docs/examples/angular/: angular_state.ipynb
docs/examples/benchmark/: benchmark_njit.ipynb
docs/examples/comparisons/: arc_fixed.py  compare_dipole_matrix_element.ipynb  compare_model_potentials.ipynb  compare_nist_energy_levels_data.ipynb  compare_radial_matrix_element.ipynb  compare_wavefunctions.ipynb  compare_whittaker.ipynb  compare_z_min.ipynb  compare_z_min_cutoff.ipynb  compare_zmin.ipynb
docs/examples/radial/: hydrogen_wavefunction.ipynb  rubidium_wavefunction.ipynb
docs/julia/: Project.toml  README.md  julia_ryd_numerov.ipynb  julia_ryd_numerov.jl
sphinx/html/: examples.html  genindex.html  include_readme.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/html/_autosummary/modules/: ryd_numerov.RydbergState.html  ryd_numerov.RydbergStateMQDT.html  ryd_numerov.RydbergStateSQDT.html  ryd_numerov.angular.calc_angular_matrix_element.html  ryd_numerov.angular.calc_reduced_angular_matrix_element.html  ryd_numerov.angular.calc_wigner_3j.html  ryd_numerov.angular.calc_wigner_6j.html  ryd_numerov.angular.check_triangular.html  ryd_numerov.angular.html  ryd_numerov.angular.minus_one_pow.html  ryd_numerov.angular.spherical_like_matrix_element.html  ryd_numerov.angular.spin_like_matrix_element.html  ryd_numerov.elements.BaseElement.html  ryd_numerov.elements.Cesium.html  ryd_numerov.elements.Element.html  ryd_numerov.elements.Francium.html  ryd_numerov.elements.HeliumIon.html  ryd_numerov.elements.Hydrogen.html  ryd_numerov.elements.HydrogenTextBook.html  ryd_numerov.elements.Lithium.html  ryd_numerov.elements.Potassium.html  ryd_numerov.elements.Rubidium.html  ryd_numerov.elements.Sodium.html  ryd_numerov.elements.Strontium87.html  ryd_numerov.elements.Strontium88.html  ryd_numerov.elements.Strontium88Singlet.html  ryd_numerov.elements.Strontium88Triplet.html  ryd_numerov.elements.StrontiumSinglet.html  ryd_numerov.elements.StrontiumTriplet.html  ryd_numerov.elements.Ytterbium171.html  ryd_numerov.elements.Ytterbium173.html  ryd_numerov.elements.Ytterbium174.html  ryd_numerov.elements.html  ryd_numerov.html  ryd_numerov.model.Database.html  ryd_numerov.model.GroundState.html  ryd_numerov.model.Model.html  ryd_numerov.model.ModelPotential.html  ryd_numerov.model.QuantumDefect.html  ryd_numerov.model.html  (+7 more)
sphinx/html/_modules/: index.html
sphinx/html/_modules/ryd_numerov/: rydberg.html  rydberg_mqdt.html
sphinx/html/_modules/ryd_numerov/angular/: angular_matrix_element.html  utils.html
sphinx/html/_sources/: examples.rst.txt
sphinx/html/_sources/examples/: dipole_elements_decay.ipynb.txt  hydrogen_wavefunction.ipynb.txt  rubidium_wavefunction.ipynb.txt
sphinx/html/examples/: dipole_elements_decay.html  dipole_elements_decay.ipynb  dipole_matrix_elements.html  hydrogen_wavefunction.html  hydrogen_wavefunction.ipynb  lifetimes.html  rubidium_wavefunction.html  rubidium_wavefunction.ipynb
sphinx/html/examples/benchmark/: benchmark_njit.html  benchmark_njit.ipynb
sphinx/html/examples/comparisons/: compare_dipole_matrix_element.html  compare_model_potentials.html  compare_model_potentials.ipynb  compare_nist_energy_levels_data.html  compare_nist_energy_levels_data.ipynb  compare_radial_matrix_element.html  compare_radial_matrix_element.ipynb  compare_wavefunctions.html  compare_wavefunctions.ipynb  compare_whittaker.html  compare_whittaker.ipynb  compare_z_min_cutoff.html  compare_z_min_cutoff.ipynb
src/numerov/: __init__.py  database.py  grid.py  integrate.py  integration.py  matrix_elements.py  model_potential.py  numerov.py  quantum_defects.sql  rydberg.py  units.py
src/numerov/angular/: __init__.py  angular_matrix_element.py  utils.py
src/numerov/model/: __init__.py  database.py  model.py  model_potential.py  quantum_defects.sql
src/numerov/radial/: __init__.py  grid.py  radial_matrix_element.py  radial_matrix_elements.py  wavefunction.py
src/ryd_numerov/: __init__.py  angular_state.py  radial_state.py  rydberg.py  rydberg_mqdt.py  rydberg_state.py  spin_state.py  units.py
src/ryd_numerov/angular/: __init__.py  angular_ket.py  angular_matrix_element.py  angular_state.py  utils.py
src/ryd_numerov/elements/: __init__.py  base_element.py  cesium.py  element.py  francium.py  helium.py  hydrogen.py  lithium.py  potassium.py  rubidium.py  sodium.py  strontium.py  ytterbium.py
src/ryd_numerov/elements/nist_energy_levels/: francium.txt  strontium.txt  ytterbium.txt
src/ryd_numerov/model/: __init__.py  allowed_states.py  database.py  database.sql  ground_state.py  model.py  model_potential.py  quantum_defect.py  rydberg_ritz.py
src/ryd_numerov/radial/: __init__.py  grid.py  model.py  numerov.py  radial_matrix_element.py  radial_state.py  sanity_check_exceptions.py  wavefunction.py
src/ryd_numerov/species/: __init__.py  cesium.py  hydrogen.py  lithium.py  potassium.py  rubidium.py  sodium.py  species_object.py  strontium.py  utils.py  ytterbium.py
tests/: ruff.toml  test_all_elements.py  test_angular_matrix_elements.py  test_angular_state.py  test_hydrogen.py  test_matrix_elements.py  test_radial_matrix_element.py  test_units.py
(+71 files in other folders)
