[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "Numerov"
version = "0.0.1"

description = "A Python package for calculating Rydberg wavefuntions."
readme = "README.md"
keywords = []

authors = [
    { name = "Johannes Mögerle" },
]

requires-python = ">= 3.9"
dependencies = [
    "numpy>=1.22",
    "numba>=0.60.0",
    "pint>=0.19",
    "scipy>=1.8",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "sympy>=1.12.1",
  "nbmake>=1.3",
]
doc = [
  "sympy>=1.12.1",
  "matplotlib>=3.7.4",
]
benchmark = [
  "pairinteraction<1.0",
  "arc-alkali-rydberg-calculator>=3.7.0",
]
dev = [
  "pip",
  "ipykernel",
]


[tool.pytest.ini_options]
testpaths = [
  "tests",
  "docs/examples",
]
addopts = [
    "--import-mode=importlib",
    "--nbmake",
]


[tool.ruff]
line-length = 120
target-version = "py39"
lint.select = ["F", "E", "B", "C", "W", "I", "UP", "TID25", "RUF", "ANN", "D"]
lint.extend-ignore = ["E741", "C901", "B905", "RUF012", "ANN003", "ANN401", "D1", "D203", "D213"]
lint.flake8-tidy-imports.ban-relative-imports = "all"
