[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "ryd-numerov"
dynamic = ["version"]

description = "A Python package for calculating Rydberg wavefuntions."
readme = "README.md"
keywords = []

authors = [
    { name = "Johannes Mögerle" },
]

requires-python = ">= 3.10"
dependencies = [
    "numpy>=2.1",
    "numexpr>=2.10",
    "numba>=0.61",
    "pint>=0.24",
    "scipy>=1.15",
    "sympy>=1.13",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "sympy>=1.12.1",
  "nbmake>=1.3",
  "ryd-numerov[benchmark]"
]
doc = [
  "sphinx >= 7",
  "sphinx-rtd-theme >= 2.0",
  "nbsphinx >= 0.9",
  "nbconvert >= 7.8",
  "jupyter >= 1.1",
  "sphinx_autodoc_typehints >= 1.24",
  "sphinx-autobuild >= 2021.3",
  "sympy>=1.12.1",
  "matplotlib>=3.7.4",
]
benchmark = [
  "pairinteraction<1.0",
  "arc-alkali-rydberg-calculator>=3.7.0",
]
dev = [
  "pip",
  "ipykernel",
]

[dependency-groups]
dev = ["ryd-numerov[doc,test,benchmark,dev]"]

[tool.setuptools.dynamic]
version = {attr = "ryd_numerov.__version__"}

[tool.uv]
override-dependencies = [
  "numpy<2.0",  # needed for pairinteraction
  "scipy>=1.15",
  "pint>=0.24",
]

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "docs/examples",
]
addopts = [
    "--import-mode=importlib",
    "--nbmake",
]


[tool.ruff]
line-length = 120
target-version = "py39"
lint.select = ["F", "E", "B", "C", "W", "I", "UP", "TID25", "RUF", "ANN", "D"]
lint.extend-ignore = ["E741", "C901", "B905", "RUF012", "ANN003", "ANN401", "D1", "D203", "D213"]
lint.flake8-tidy-imports.ban-relative-imports = "all"
