[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "ryd-numerov"
dynamic = ["version"]
description = "A Python package for calculating Rydberg wavefunctions."
readme = "README.md"
keywords = ["rydberg", "wavefunctions", "numerov", "quantum physics"]
authors = [
    { name = "Rydberg Numerov Developers" },
]
maintainers = [
    { name = "Johannes Mögerle", email = "johannes.moegerle@itp3.uni-stuttgart.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Typing :: Typed",
]
requires-python = ">= 3.10"
dependencies = [
    "numpy >= 2.0",
    "numexpr >= 2.10",
    "numba >= 0.60",
    "pint >= 0.24",
    "scipy >= 1.13",
    "sympy >= 1.13",
]

[project.optional-dependencies]
tests = [
  "pytest >= 8.0",
  "nbmake >= 1.3",
  "ryd-numerov[benchmark]"
]
docs = [
  "sphinx >= 7",
  "sphinx-rtd-theme >= 2.0",
  "nbsphinx >= 0.9",
  "nbconvert >= 7.8",
  "jupyter >= 1.1",
  "sphinx_autodoc_typehints >= 1.24",
  "sphinx-autobuild >= 2021.3",
  "matplotlib >= 3.7.4",
]
benchmark = [
  "pairinteraction < 1.0",
  "arc-alkali-rydberg-calculator >= 3.7.0",
]
jupyter = [
  "pip",
  "ipykernel",
]
mypy = [
  "mypy >= 1.14",
  "scipy-stubs >= 1.15; python_version >= '3.10'",
]

[dependency-groups]
dev = ["ryd-numerov[docs,tests,benchmark,jupyter,mypy]"]

[project.urls]
Repository = "https://github.com/pairinteraction/ryd-numerov"

[tool.setuptools.dynamic]
version = {attr = "ryd_numerov.__version__"}

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "docs/examples",
  "src/ryd_numerov"
]
addopts = [
    "--import-mode=importlib",
    "--nbmake",
    "--doctest-modules",
]


[tool.ruff]
line-length = 120
target-version = "py39"
lint.select = ["F", "E", "B", "C", "W", "I", "UP", "TID25", "RUF", "ANN", "D"]
lint.extend-ignore = ["E741", "C901", "B905", "RUF012", "ANN003", "ANN401", "D1", "D203", "D213"]
lint.flake8-tidy-imports.ban-relative-imports = "all"
